force-app/main/default/objects/ssot__ProductBrowseEngagement__dlm/fields/ssot__DataSourceId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DataSourceId__c</fullName>
    <label>Data Source</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DataSourceId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>