force-app/main/default/objects/ssot__ProductBrowseEngagement__dlm/fields/ssot__EngagementChannelId__c.field-meta.xml
<CustomField>
    <fullName>ssot__EngagementChannelId__c</fullName>
    <label>Engagement Channel</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EngagementChannelId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>