force-app/main/default/objects/ssot__ProductBrowseEngagement__dlm/fields/ssot__PerslServiceProviderName__c.field-meta.xml
<CustomField>
    <fullName>ssot__PerslServiceProviderName__c</fullName>
    <label>Personalization Service Provider</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PerslServiceProviderName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>