force-app/main/default/objects/ssot__ProductBrowseEngagement__dlm/fields/ssot__ProductDisplayPosition__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProductDisplayPosition__c</fullName>
    <label>Product Display Position</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProductDisplayPosition</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>