force-app/main/default/objects/ssot__ProductBrowseEngagement__dlm/fields/ssot__ProductPriceAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProductPriceAmount__c</fullName>
    <label>Product Price</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProductPriceAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>