force-app/main/default/objects/ssot__ProductBrowseEngagement__dlm/fields/ssot__rel_1697761159043_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761159043_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactPointAddress_Id_map_ProductBr_rel</label>
    <referenceTo>ssot__ContactPointAddress__dlm</referenceTo>
    <relationshipLabel>ContactPointAddress_Id_map_ProductBr_rel</relationshipLabel>
    <relationshipName>rel_1697761159043_end</relationshipName>
    <type>Lookup</type>
</CustomField>