force-app/main/default/objects/ssot__ProductBrowseEngagement__dlm/fields/ssot__SearchResultPageNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__SearchResultPageNumber__c</fullName>
    <label>Search Result Page Number</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SearchResultPageNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>