force-app/main/default/objects/ssot__ProductBrowseEngagement__dlm/fields/ssot__SearchResultPositionInPageNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__SearchResultPositionInPageNumber__c</fullName>
    <label>Search Result Position in Page</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SearchResultPositionInPageNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>