force-app/main/default/objects/ssot__ProductBrowseEngagement__dlm/fields/ssot__SearchResultSortValue__c.field-meta.xml
<CustomField>
    <fullName>ssot__SearchResultSortValue__c</fullName>
    <label>Search Result Sort Value</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SearchResultSortValue</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>