force-app/main/default/objects/ssot__ProductBrowseEngagement__dlm/fields/ssot__WebCookieId__c.field-meta.xml
<CustomField>
    <fullName>ssot__WebCookieId__c</fullName>
    <label>Web Cookie</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WebCookieId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>